--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,27 @@
 .main-content__title {
   font-family: Roboto;
-}
-.main-content__title {
   color: pink;
+}
+.wrapper {
+  margin: auto;
+  width: 80%;
+  border: dashed 1px red;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  padding: 40px 0;
+}
+.menu {
+  display: flex;
+  align-items: center;
+}
+.menu__item {
+  padding: 0 13px;
+  border: dashed 1px red;
+}
+.menu__item:last-child {
+  padding-right: 0;
 }
