--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,29 @@
-.main-content__title {
-  font-family: Roboto;
-  color: pink;
+.main {
+  padding: 0 63% 100px 0;
+  background: top right no-repeat url(img/mainImg.svg);
+}
+.main__title {
+  margin: 0 0 40px 0;
+  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+}
+.main__subtitle {
+  margin: 0 0 41px 0;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+}
+.main__button {
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
+  padding: 14px 16px;
+  color: #fff;
+  background: #0056EC;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: opacity .5s;
+}
+.main__button:hover{
+  opacity: .5;
+}
+.main__title-text_highlight {
+  background: #ECF3FF;
 }
 .wrapper {
   margin: auto;
@@ -9,6 +32,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .logo {
   position: relative;
